/*
 * Copyright Â©2011 Brice Arnould
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU Affero General Public License as published
 * by the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU Affero General Public License for more details.
 *
 * You should have received a copy of the GNU Affero General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */

package net.vleu.par.protocolbuffer;

// This file relies on plugins to generate service code.
option cc_generic_services = false;
option java_generic_services = false;
option py_generic_services = false;

option optimize_for = SPEED;

import "commands.proto";
import "devices.proto";

message GatewayRequestData {
	message RegisterDeviceData {
		required string device_id = 1;
		/* If absent, C2DM is disabled for this device */
		optional string C2DM_registration_id = 2;
		required string friendly_name = 3;
	}
	message QueueDirectiveData {
		required string device_id = 1;
		required DirectiveData directive = 2;
	}
	message GetDeviceDirectivesData {
		required string device_id = 1;
		/*
		 * Used for acknowledgements and prevention of double deliveries.
		 * See "big_picture.txt" at the root of the project for a description
		 * of its usage
		 * TODO : Implement acks and use those
		 */
		repeated DirectiveIdData acknowledgements = 2;
	}
	message EnumerateDevicesData {
	}
	repeated RegisterDeviceData register_device = 1;
	repeated QueueDirectiveData queue_directive = 2;
	repeated GetDeviceDirectivesData get_device_directives = 3;
	optional EnumerateDevicesData enumerate_devices = 4;
}

message GatewayResponseData {
	message DeviceDescriptionData {
		required string device_id = 1;
		required string friendly_name = 3;
	}

	repeated DirectiveData directive = 1;
	/*
	 * Used for acknowledgements and prevention of double deliveries.
	 * See "big_picture.txt" at the root of the project for a description
	 * of its usage
	 * TODO : Implement acks and use those
	 */
	repeated fixed64 creator_ids_to_forget = 2;
	repeated DeviceDescriptionData device_descriptions = 3;
}